@@ -24,6 +24,7 @@ Version 1.10.5+svn:
      to be made translatable
    * Make drakes fly on volcano tiles (bug #20485).
    * Fixed bug #20290: No longer terminate due to a corrupt savegame.
+   * Fixed bug #19970: No longer terminate due to corrupt preferences.
 
 Version 1.10.5:
  * Campaigns:
